--- a/app/src/main/res/layout/countryloader.xml
+++ b/app/src/main/res/layout/countryloader.xml
@@ -15,11 +15,14 @@
 
 <LinearLayout
     android:layout_width="match_parent"
+    android:layout_margin="10dp"
+    android:onClick="@{()-> clickListener.onClick(country)}"
     android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
         android:text="@{country.name}"
         />
 </LinearLayout>
